fix: Gradle build files
Took 53 minutes